--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
 
 
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/header.css">
-    <link rel="stylesheet" href="/assets/css/acordeon.css">
-    <link rel="stylesheet" href="/assets/css/languages.css">
-    <link rel="stylesheet" href="/assets/css/projetos.css">
-    <link rel="stylesheet" href="/assets/css/experience.css">
-    <link rel="stylesheet" href="/assets/css/skills.css">
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/acordeon.css">
+    <link rel="stylesheet" href="assets/css/languages.css">
+    <link rel="stylesheet" href="assets/css/projetos.css">
+    <link rel="stylesheet" href="assets/css/experience.css">
+    <link rel="stylesheet" href="assets/css/skills.css">
 
 
 </head>
@@ -37,7 +37,7 @@
 
     <main class="main">
         <header class="header">
-            <img src="/assets/img/Luan.jpg" alt="Foto Luan Santos" class="photo">
+            <img src="assets/img/Luan.jpg" alt="Foto Luan Santos" class="photo">
 
 
             <h1 class="title">
@@ -72,25 +72,25 @@
                         <h3>Habilidades Profissionais</h3>
                         <ul>
                             <li>
-                                <img src="/assets/img/icons/tools/html.svg" alt="HTML" title="HTML">
+                                <img src="assets/img/icons/tools/html.svg" alt="HTML" title="HTML">
                             </li>
                             <li>
-                                <img src="/assets/img/icons/tools/css.svg" alt="CSS" title="CSS">
+                                <img src="assets/img/icons/tools/css.svg" alt="CSS" title="CSS">
                             </li>
                             <li>
-                                <img src="/assets/img/icons/tools/js.svg" alt="JavaScript" title="JavaScript">
+                                <img src="assets/img/icons/tools/js.svg" alt="JavaScript" title="JavaScript">
                             </li>
                             <li>
-                                <img src="/assets/img/icons/tools/node.svg" alt="NodeJs" title="NodeJs">
+                                <img src="assets/img/icons/tools/node.svg" alt="NodeJs" title="NodeJs">
                             </li>
                             <li>
-                                <img src="/assets/img/icons/tools/git.svg" alt="Git" title="Git">
+                                <img src="assets/img/icons/tools/git.svg" alt="Git" title="Git">
                             </li>
                             <li>
-                                <img src="/assets/img/icons/tools/aws.svg" alt="AWS" title="AWS">
+                                <img src="assets/img/icons/tools/aws.svg" alt="AWS" title="AWS">
                             </li>
                             <li>
-                                <img src="/assets/img/icons/tools/java.svg" alt="Java" title="Java">
+                                <img src="assets/img/icons/tools/java.svg" alt="Java" title="Java">
                             </li>
 
 
@@ -245,7 +245,7 @@
         </section>
     </main>
 
-    <script src="/assets/js/acordeon.js"></script>
+    <script src="assets/js/acordeon.js"></script>
 </body>
 
 </html>
