--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio Luan Santos</title>
+    <title>Portifólio Luan Santos.</title>
+
+
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -13,7 +14,13 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
+
+
 
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/header.css">
@@ -22,49 +29,121 @@
     <link rel="stylesheet" href="assets/css/portfolio.css">
     <link rel="stylesheet" href="assets/css/experience.css">
     <link rel="stylesheet" href="assets/css/skills.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
+
+
 </head>
 
 <body>
+
     <main class="main">
         <header class="header">
-            <img src="assets/img/my-photo.png" alt="Foto de Perfil" class="photo" id="profile.photo">
+            <img src="assets/img/Luan.jpg" alt="Foto Luan Santos" class="photo">
+
 
             <h1 class="title">
-                Olá, <br>eu sou <span id="profile.name">Carregando...</span>
+                Olá, <br>Eu Sou Luan Santos.
             </h1>
 
+
             <div class="information">
-                <p class="job" id="profile.job">Carregando...</p>
-                <p class="location" id="profile.location">Carregando...</p>
+                <p class="job">Estudante</p>
+                <p class="location">
+                    <a href="https://www.google.com.br/maps/place/R.+770,+220+-+Centro,+Balne%C3%A1rio+Cambori%C3%BA+-+SC,+88330-601/@-26.9934867,-48.6440917,17z/data=!3m1!4b1!4m6!3m5!1s0x94d8b5fce24fff7d:0x6bda48f402e80bc2!8m2!3d-26.9934915!4d-48.6415168!16s%2Fg%2F11c2dtdwx5?entry=ttu"
+                        target="_blank">Balneário Camboriú -SC </a>
+                </p>
                 <p class="phone">
-                    <a href="tel:(16) 9 9999-9999" id="profile.phone">Carregando...</a>
+                    <a href="tel:(47)996595349">(47)996595349</a>
                 </p>
                 <p class="email">
-                    <a href="mailto:ex@mail.com" id="profile.email">carregando@mail.com</a>
+                    <a href="mailto:luan10091993@hotmail.com">luan10091993@hotmail.com</a>
                 </p>
             </div>
         </header>
 
         <section class="acordeon">
             <button class="trigger" type="button">
-                <h2>Skills</h2>
+                <h2>SKills</h2>
             </button>
 
             <div class="content">
                 <div class="skills">
+
                     <section class="tools">
-                        <h3>Ferramentas:</h3>
-                        <ul id="profile.skills.hardSkills">
+                        <h3>Habilidades Profissionais</h3>
+                        <ul>
+                            <li>
+                                <img src="assets/img/icons/tools/html.svg" alt="HTML" title="HTML">
+                            </li>
+                            <li>
+                                <img src="assets/img/icons/tools/css.svg" alt="CSS" title="CSS">
+                            </li>
+                            <li>
+                                <img src="assets/img/icons/tools/js.svg" alt="JavaScript" title="JavaScript">
+                            </li>
+                            <li>
+                                <img src="assets/img/icons/tools/node.svg" alt="NodeJs" title="NodeJs">
+                            </li>
+                            <li>
+                                <img src="assets/img/icons/tools/git.svg" alt="Git" title="Git">
+                            </li>
+                            <li>
+                                <img src="assets/img/icons/tools/aws.svg" alt="AWS" title="AWS">
+                            </li>
+                            <li>
+                                <img src="assets/img/icons/tools/java.svg" alt="Java" title="Java">
+                            </li>
+
+
+
+
+
+
                         </ul>
                     </section>
 
                     <section class="personal">
-                        <h3>Pessoal:</h3>
-                        <ul id="profile.skills.softSkills">
-                            <li>Carregando...</li>
-                            <li>Carregando...</li>
-                            <li>Carregando...</li>
+                        <h3>Habilidades Pessoais</h3>
+                        <ul>
+                            <li>Liderança</li>
+                            <li>Facilidade com tarefas práticas</li>
+                            <li>Comunicação</li>
+                            <li>Trabalho em Equipe</li>
+                            <li>Organização</li>
+                            <li>Comprometimento com resultados</li>
+
+
+                        </ul>
+                    </section>
+                </div>
+            </div>
+        </section>
+
+        <section class="acordeon">
+            <button class="trigger" type="button">
+                <h2>Educação</h2>
+            </button>
+
+            <div class="content">
+                <div class="skills">
+
+                    <section class="tools">
+                        <h3>Ensino</h3>
+                        <ul>
+                            <li>Engenharia da Computação - Cursando</li>
+                        </ul>
+                    </section>
+
+                    <section class="languages">
+                        <h3>Cursos Complementares</h3>
+                        <ul>
+                            <li>JavaScript</li> <br>
+                            <li>Fundamentos de Python 1 - Cisco</li> <br>
+                            <li>Conceitos Básicos de Rede - Cisco</li> <br>
+                            <li>Desenvolvedor Orientado a Objetos</li> <br>
+                            <li>DB Developer</li> <br>
+                            <li>Fundamentos Microsoft 365</li> <br>
+
+
                         </ul>
                     </section>
                 </div>
@@ -77,19 +156,38 @@
             </button>
 
             <div class="content">
-                <ul class="languages" id="profile.languages">
-                    <li>Carregando...</li>
+                <ul class="languages">
+                    <li>Português (BR)</li>
+                    <li>Inglês - Básico</li>
                 </ul>
+
             </div>
         </section>
 
         <section class="acordeon">
             <button class="trigger" type="button">
-                <h2>Portfólio</h2>
+                <h2>Projetos</h2>
             </button>
 
             <div class="content">
-                <ul class="portfolio" id="profile.portfolio">
+                <ul class="Projetos">
+                    <li>
+                        <h3 class="title github">Pokedex</h3>
+                        <a href="https://www.github.com/LuaSant93/pokedex"
+                            target="_blank">www.github.com/LuaSant93/pokedex</a>
+                    </li>
+
+                    <li>
+                        <h3 class="title github">Certificard</h3>
+                        <a href="https://luasant93.github.io/certifcard/"
+                            target="_blank">www.luasant93.github.io/certifcard/</a>
+                    </li>
+
+                    <li>
+                        <h3 class="title github">Desafio Lógica Inicial</h3>
+                        <a href="https://github.com/LuaSant93/desafio-logica-inicial"
+                            target="_blank">www.github.com/LuaSant93/desafio-logica-inicial</a>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -100,21 +198,54 @@
             </button>
 
             <div class="content">
-                <ul class="experience" id="profile.professionalExperience">
+                <ul class="experience">
+                    <li>
+                        <h3 class="title">Breton / Auxiliar Centro de Distribuição</h3>
+                        <h3 class="period">Jan 2023 - Nov 2023</h3>
+                        <p>
+                            Como auxiliar de centro de distribuição,
+                            desempenhei um papel fundamental na execução eficiente das operações logísticas.
+                            Minhas responsabilidades incluíam a recepção, armazenamento, separação e expedição de
+                            produtos,
+                            garantindo a precisão e a agilidade nas atividades de distribuição.
+                        </p>
+                    </li>
+
+                    <li>
+                        <h3 class="title">São Gabriel Marmores / Marmorista</h3>
+                        <h3 class="period">Jan 2020 - Out 2022</h3>
+                        <p>
+                            Como marmorista, possuo experiência sólida na manipulação e instalação de materiais de
+                            pedra, incluindo mármore,
+                            granito e outras superfícies similares. Minha expertise abrange desde a preparação inicial
+                            do material até a instalação final,
+                            garantindo acabamentos de alta qualidade em projetos residenciais e comerciais.
+                        </p>
+                    </li>
+
+                    <li>
+                        <h3 class="title">Casas Da Água / Auxiliar de Motorista</h3>
+                        <h3 class="period">Jan 2018 - Jan 2020</h3>
+                        <p>
+                            Como auxiliar de motorista, desempenhei um papel fundamental no suporte às operações de
+                            transporte,
+                            garantindo a entrega eficiente e segura de mercadorias. Colaborei estreitamente com os
+                            motoristas para assegurar a pontualidade e a precisão nas entregas,
+                            além de lidar com tarefas logísticas essenciais.
+                        </p>
+                    </li>
+
+
+
+
+
                 </ul>
+
             </div>
         </section>
-
-        <footer>
-            <a href="https://www.dio.me/" target="_blank">
-                <img src="assets/img/dio.svg" alt="DIO">
-            </a>
-        </footer>
     </main>
 
     <script src="assets/js/acordeon.js"></script>
-    <script src="assets/js/api.js"></script>
-    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
