--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio Luan Santos.</title>
+    <title>Portfólio Luan Santos.</title>
 
 
 
@@ -29,6 +29,18 @@
     <link rel="stylesheet" href="assets/css/projetos.css">
     <link rel="stylesheet" href="assets/css/experience.css">
     <link rel="stylesheet" href="assets/css/skills.css">
+
+    <style>
+        h1,
+        p {
+            color: white;
+            text-shadow: 10px 10px 6px;
+        }
+
+        h4 {
+            font-style: italic;
+        }
+    </style>
 
 
 </head>
@@ -202,37 +214,37 @@
                     <li>
                         <h3 class="title">Breton / Auxiliar Centro de Distribuição</h3>
                         <h3 class="period">Jan 2023 - Nov 2023</h3>
-                        <p>
+                        <h4>
                             Como auxiliar de centro de distribuição,
                             desempenhei um papel fundamental na execução eficiente das operações logísticas.
                             Minhas responsabilidades incluíam a recepção, armazenamento, separação e expedição de
                             produtos,
                             garantindo a precisão e a agilidade nas atividades de distribuição.
-                        </p>
+                        </h4>
                     </li>
 
                     <li>
                         <h3 class="title">São Gabriel Marmores / Marmorista</h3>
                         <h3 class="period">Jan 2020 - Out 2022</h3>
-                        <p>
+                        <h4>
                             Como marmorista, possuo experiência sólida na manipulação e instalação de materiais de
                             pedra, incluindo mármore,
                             granito e outras superfícies similares. Minha expertise abrange desde a preparação inicial
                             do material até a instalação final,
                             garantindo acabamentos de alta qualidade em projetos residenciais e comerciais.
-                        </p>
+                        </h4>
                     </li>
 
                     <li>
                         <h3 class="title">Casas Da Água / Auxiliar de Motorista</h3>
                         <h3 class="period">Jan 2018 - Jan 2020</h3>
-                        <p>
+                        <h4>
                             Como auxiliar de motorista, desempenhei um papel fundamental no suporte às operações de
                             transporte,
                             garantindo a entrega eficiente e segura de mercadorias. Colaborei estreitamente com os
                             motoristas para assegurar a pontualidade e a precisão nas entregas,
                             além de lidar com tarefas logísticas essenciais.
-                        </p>
+                        </h4>
                     </li>
 
 
