--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         target="_blank">Balneário Camboriú -SC </a>
                 </p>
                 <p class="phone">
-                    <a href="tel:(47)996595349">(47)996595349</a>
+                    <a href="tel:5547996595349">(47)996595349</a>
                 </p>
                 <p class="email">
                     <a href="mailto:luan10091993@hotmail.com">luan10091993@hotmail.com</a>
