--- a/index.html
+++ b/index.html
@@ -198,6 +198,23 @@
 
             <div class="content">
                 <ul class="experience">
+
+                    <li>
+                        <h3 class="title">Prodoo / Estagiário de Desenvolvimento</h3>
+                        <h3 class="period">Fev 2024 - Atual</h3>
+                        <h4>
+                            Como estagiário de desenvolvimento, tenho a oportunidade de trabalhar com Python e análise
+                            de dados,desempenhando um papel essencial na transformação de dados em insights valiosos
+                            para a empresa.
+                            Minhas responsabilidades incluem o desenvolvimento de soluções utilizando Python
+                            para manipulação e processamento de dados,análise de dados com SQLite para extrair informações
+                            relevantes e criação de visualizações
+                            dinâmicas e relatórios interativos no Power BI.
+                            Estou constantemente aprendendo e colaborando em projetos multifuncionais, enquanto
+                            contribuo para o sucesso do negócio através da aplicação de tecnologias.
+                        </h4>
+                    </li>
+
                     <li>
                         <h3 class="title">Breton / Auxiliar Centro de Distribuição</h3>
                         <h3 class="period">Jan 2023 - Nov 2023</h3>
@@ -221,22 +238,6 @@
                             garantindo acabamentos de alta qualidade em projetos residenciais e comerciais.
                         </h4>
                     </li>
-
-                    <li>
-                        <h3 class="title">Casas Da Água / Auxiliar de Motorista</h3>
-                        <h3 class="period">Jan 2018 - Jan 2020</h3>
-                        <h4>
-                            Como auxiliar de motorista, desempenhei um papel fundamental no suporte às operações de
-                            transporte,
-                            garantindo a entrega eficiente e segura de mercadorias. Colaborei estreitamente com os
-                            motoristas para assegurar a pontualidade e a precisão nas entregas,
-                            além de lidar com tarefas logísticas essenciais.
-                        </h4>
-                    </li>
-
-
-
-
 
                 </ul>
 
